# py-main-template

./: Makefile  README.md  pyproject.toml
src/cybersamx_main/: __main__.py
tests/: test_stats.py
