[project]
name = 'cybersamx_main'
description = 'This is a python main template.'
readme = 'README.md'
version = '0.1.0'
requires-python = '>=3.11'
dependencies = ['numpy']

[project.scripts]
my_program = 'cybersamx_main:main'

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

# Exclude tests from the distribution
[tool.setuptools.packages.find]
where = ['src']
include = ['*']
exclude = ['tests']

# Include this configruation so that we can import the module we want to test.
[tool.pytest.ini_options]
pythonpath = ['src']
